--- a/action.yml
+++ b/action.yml
@@ -17,25 +17,19 @@ runs:
         # 正则表达式检查提交信息格式
         if [[ ! "$commit_message" =~ ^(fix|feat|chore|ci|docs|style|refactor|test)(\(\S+\))?\!?:\ .+ ]]; then
           echo "::error::Commit message does not follow the correct format:"
-          echo "::warning::●"
-          echo "::warning::<type>[optional scope]: <description>"
-          echo "::warning::○"
-          echo "::warning::type"
-          echo "::warning::■ fix      -- 解决bug"
-          echo "::warning::■ feat     -- 添加新功能"
-          echo "::warning::■ chore    -- 不重要的"
-          echo "::warning::■ ci       -- workflow更新"
-          echo "::warning::■ docs     -- 说明文档等更新"
-          echo "::warning::■ style    -- 样式等更新"
-          echo "::warning::■ refactor -- 重构"
-          echo "::warning::■ test     -- 测试代码等更新"
-          echo "::warning::●"
-          echo "::warning::<type>[optional scope]! : <description>"
-          echo "::warning::●"
-          echo "::warning::加!表示是重大更新;"
-          echo "::warning::●"
-          echo "::warning::注意在!和<description>之间有一个空格"
-          echo "::warning::●"
-          echo "::warning::: 冒号是英文输入法下的符号, 不是中文输入法下的符号"
+          echo "::warning::● <type>[optional scope]: <description>"
+          echo "::warning::  ○ type"
+          echo "::warning::    ■ fix      -- 解决bug"
+          echo "::warning::    ■ feat     -- 添加新功能"
+          echo "::warning::    ■ chore    -- 不重要的"
+          echo "::warning::    ■ ci       -- workflow更新"
+          echo "::warning::    ■ docs     -- 说明文档等更新"
+          echo "::warning::    ■ style    -- 样式等更新"
+          echo "::warning::    ■ refactor -- 重构"
+          echo "::warning::    ■ test     -- 测试代码等更新"
+          echo "::warning::● <type>[optional scope]!: <description>"
+          echo "::warning::  ○ 加!表示是重大更新;"
+          echo "::warning::  ○ 注意在!:和<description>之间有一个空格"
+          echo "::warning::● 冒号是英文输入法下的符号, 不是中文输入法下的符号"
           exit 1
         fi
